--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,17 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Sample Style Guide Application
+email: andyhowell@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  This is a sample app to test deploying a static style guide straight to a Git Hub page
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://spacebeers.github.io" # the base hostname & protocol for your site
+twitter_username: spacebeers
+github_username:  spacebeers
+collections:
+  components:
+    output: true
 
 # Build settings
 markdown: kramdown
