--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Sample Style Guide Application
+title: Virgin Holidays Style Guide
 email: andyhowell@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
   This is a sample app to test deploying a static style guide straight to a Git Hub page
